--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ body {
   
   header img {
     width:100%;
+    height: 100vh;
   }
   
   nav{
@@ -58,6 +59,7 @@ body {
     text-transform: uppercase;
     color: black;
     font-weight: bold;
+    text-decoration: none;
   }
   
   nav li {
@@ -75,8 +77,7 @@ body {
     height: 5px;
     width:0%;
     opacity:0;
-    background-color:
-  #ee3341;
+    background-color: #ee3341;
     
     position:absolute;
     transition: all ease-in-out 350ms;
@@ -183,6 +184,8 @@ body {
     display:flex;
     align-items:center;
     justify-content:center;
+    height:200px;
+    width:300px;
   }
   
   .imgWrap p{
